--- a/ViewSample/app/src/main/res/values/strings.xml
+++ b/ViewSample/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">ViewSample</string>
     <string name="tv_msg">お名前を入力して下さい。</string>
+    <string name="bt_save">保存</string>
 </resources>
